--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,7 @@ body {
     background-color: rgb(36, 36, 41);
     color: rgb(229 231 235);
     font-family: 'Roboto', sans-serif;
+    margin: 0;
 }
 
 a:visited {
@@ -12,7 +13,7 @@ a:visited {
 
 h1 {
     text-align: center;
-    margin-bottom: 5%;
+    margin-bottom: 1%;
 }
 
 section {
@@ -57,4 +58,28 @@ button:hover {
 
 button:active {
     background-color: rgb(98, 98, 211);
+}
+
+
+ul.horizontal {
+    background-color: rgb(49, 46, 53);
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+
+ul.horizontal li a {
+    display: inline-block;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+}
+
+ul.horizontal li a.active {
+    background-color: rgb(114, 3, 136);
 }
