--- a/css/style.css
+++ b/css/style.css
@@ -70,18 +70,19 @@ ul.horizontal {
     display: flex;
     flex-direction: row;
     justify-content: center;
-}
 
-ul.horizontal li a {
-    display: inline-block;
-    color: white;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-}
+    li a {
+        display: inline-block;
+        color: white;
+        text-align: center;
+        padding: 14px 16px;
+        text-decoration: none;
+    }
 
-ul.horizontal li a.active {
-    background-color: rgb(114, 3, 136);
+    li a.active {
+        background-color: rgb(114, 3, 136);
+    }
+
 }
 
 h3.problem {
@@ -90,29 +91,29 @@ h3.problem {
 
 .form-group {
     margin-bottom: 2.5%;
-}
 
-.form-group label {
-    display: block;
-}
+    label {
+        display: block;
+    }
 
-.form-group input {
-    padding: 8px 10px;
-    line-height: 120%;
-}
+    input {
+        padding: 8px 10px;
+        line-height: 120%;
+    }
 
-.form-group input:invalid,
-.form-group textarea:invalid,
-.form-group select:invalid {
-    border: 3px solid red;
-    border-radius: 5px;
+    textarea {
+        font-size: medium;
+        font-family: 'Roboto', sans-serif;
+    }
+
+    input:invalid,
+    textarea:invalid,
+    select:invalid {
+        border: 3px solid red;
+        border-radius: 5px;
+    }
 }
 
 button.submit-problem {
     padding: 1%;
-}
-
-.form-group textarea {
-    font-size: medium;
-    font-family: 'Roboto', sans-serif;
 }
