--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,7 @@ body {
     color: rgb(229 231 235);
     font-family: 'Roboto', sans-serif;
     margin: 0;
+    padding-bottom: 1%;
 }
 
 a:visited {
@@ -14,6 +15,8 @@ a:visited {
 h1 {
     text-align: center;
     margin-bottom: 1%;
+    margin-top: 0;
+    padding-top: 1%;
 }
 
 section {
@@ -176,5 +179,18 @@ button.submit-problem {
     button.version[disabled] {
         background-color: rgb(114, 3, 136);
         cursor: auto;
+    }
+}
+
+.choice {
+    padding-bottom: 2%;
+    border-bottom: 2px solid rgb(146, 6, 173);
+
+    h4 {
+        margin-bottom: 2px;
+    }
+
+    p {
+        margin-top: 2px;
     }
 }
